--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 * {
   box-sizing: border-box;
@@ -77,21 +78,25 @@ img {
 #item-1:checked ~ .cards #song-5, #item-2:checked ~ .cards #song-6, #item-3:checked ~ .cards #song-1, #item-4:checked ~ .cards #song-2, #item-5:checked ~ .cards #song-3, #item-6:checked ~ .cards #song-4 {
   transform: translatex(-160%) scale(.6);
   z-index: 0;
+  color: rgb(255, 199, 94);
 }
 
 #item-1:checked ~ .cards #song-6, #item-2:checked ~ .cards #song-1, #item-3:checked ~ .cards #song-2, #item-4:checked ~ .cards #song-3, #item-5:checked ~ .cards #song-4, #item-6:checked ~ .cards #song-5 {
   transform: translatex(-80%) scale(.8);
   z-index: 0;
+  color: rgb(255, 199, 94);
 }
 
 #item-1:checked ~ .cards #song-2, #item-2:checked ~ .cards #song-3, #item-3:checked ~ .cards #song-4, #item-4:checked ~ .cards #song-5, #item-5:checked ~ .cards #song-6, #item-6:checked ~ .cards #song-1 {
   transform: translatex(80%) scale(.8);
   z-index: 0;
+  color: rgb(255, 199, 94);
 }
 
 #item-1:checked ~ .cards #song-3, #item-2:checked ~ .cards #song-4, #item-3:checked ~ .cards #song-5, #item-4:checked ~ .cards #song-6, #item-5:checked ~ .cards #song-1, #item-6:checked ~ .cards #song-2 {
   transform: translatex(160%) scale(.6);
   z-index: 0;
+  color: rgb(255, 199, 94);
 }
 
 #item-1:checked ~ .cards #song-1, #item-2:checked ~ .cards #song-2, #item-3:checked ~ .cards #song-3, #item-4:checked ~ .cards #song-4, #item-5:checked ~ .cards #song-5, #item-6:checked ~ .cards #song-6 {
@@ -125,6 +130,7 @@ img {
 .song-info {
   width: calc(100% - 32px);
   display: block;
+  font-family: 'Press Start 2P', cursive;;
 }
 
 .song-info .title {
@@ -176,3 +182,112 @@ img {
     background-size: cover;
     position: fixed;
 }
+
+@keyframes move-in-popup {
+  from {transform: translatex(0) scale(1);}
+  to {transform: translatex(-160%) scale(1); color:rgb(255, 199, 94)}
+  }
+
+@keyframes hide-elements {
+    from {width: 100%;}
+    to {opacity: 0;
+      width: 0%;
+      display: none;
+      font-size:0;}
+}
+
+@keyframes hide-player {
+  from {opacity: 1;}
+  to {opacity: 0;
+    z-index: 0;}
+}
+
+.popup-animation-player {
+  z-index: 10;
+  animation: move-in-popup  2s ease-in-out forwards;
+}
+
+.hide-character {
+  animation: hide-elements 2s ease-in-out forwards;
+}
+
+.hide-player {
+  animation: hide-player 2s ease-in-out forwards;
+}
+
+@keyframes show-popup {
+  from {opacity: 0;}
+  50% {opacity: 0;}
+  to {opacity: 1;
+    z-index: 10;}
+}
+
+.popup {
+  display: none;
+}
+
+.popup-show {
+  animation: show-popup 4s ease-in-out forwards;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dark {
+  background-color: black;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  opacity: .4;
+  z-index: 1;
+}
+
+.popup-content {
+  margin: auto;
+  top: 50%;
+  width: 700px;
+  height: 500px;
+  background-color: rgb(255, 255, 255);
+  z-index: 2;
+  border-radius: 10px;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.popup-content h1 {
+  margin-left: 15px;
+  text-align: center;
+}
+
+.popup-content h3 {
+  margin-left: 15px;
+}
+
+.popup-content #person-cristalls {
+  font-size: 72px;
+}
+
+.popup-content #person-cristalls img {
+  width: 110px;
+}
+
+#person-param label {
+  text-align: right;
+}
+
+#person-param progress{
+  width: 25%;
+}
+
+.character-level {
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  margin-bottom: -5px;
+  font-size: 27px;
+}
+
